--- a/blog/templates/contact.html
+++ b/blog/templates/contact.html
@@ -10,6 +10,10 @@
             text-align: center;
             margin-top: 2rem;
         }
+        body{
+          background: rgb(159, 220, 255);
+          margin: 1rem;
+      }
         form{
             width: 60%;
         }
@@ -26,7 +30,7 @@
     </style>
 </head>
 <body>
-    <a href="http://localhost:8080/blog/"><button>Back</button></a>
+    <a href="http://localhost:8080/blog/"><button style="border: none; background: #1379ff; color: #ffffff;">Back</button></a>
     <div class="container">
         <h1>Contact Us</h1>
         <div class="form-container">
