--- a/blog/templates/home.html
+++ b/blog/templates/home.html
@@ -13,6 +13,12 @@
       margin-top: 15px;
       padding: 10px;
       font-size: 2rem;
+      border: none; 
+      background: #1379ff;
+       color: #ffffff;"
+    }
+    body{
+      background: rgb(159, 220, 255);
     }
     button:hover{
       color: blueviolet;
