--- a/blog/templates/about.html
+++ b/blog/templates/about.html
@@ -6,13 +6,16 @@
     <title>Document</title>
   </head>
   <style>
+    body{
+      background: rgb(159, 220, 255);
+  }
     button {
       margin-top: 15px;
       padding: 10px;
     }
   </style>
   <body>
-    <a href="http://localhost:8080/blog/"><button>Back</button></a>
+    <a href="http://localhost:8080/blog/"><button style="border: none; background: #1379ff; color: #ffffff;">Back</button></a>
     <h1 style="text-align: center">About us</h1>
     <p style="margin: 2rem 2rem; font-size: 1.5rem">
       Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda
