--- a/blog/templates/articles.html
+++ b/blog/templates/articles.html
@@ -23,7 +23,7 @@
         border-radius: 5px; 
         border: 2px solid #1379ff;
     }
-    input{
+    input,textarea{
         outline: none;
         border: none;
         margin-top: 10px;
@@ -49,11 +49,11 @@
 <body>
     <div >
         <a href="http://localhost:8080/blog/"><button >Back</button></a>
-        <h1 style="text-align: center;">Create a blog</h1>
+        <h1 style="text-align: center; margin-top: -2rem;">Create a blog</h1>
     </div>
 
 
-   <div style="display: flex; justify-content: center; align-items: center;">
+   <div style="display: flex; justify-content: center; align-items: center; ">
     <form   method="post">
         {% csrf_token%}
         {{form}}
@@ -66,7 +66,7 @@
         <input  type="submit" value="Create Article" style="border: none; background: #1379ff; color: #ffffff;">
     </form>
    </div>    
-   <h1 style="text-align:left; margin-left: 1rem;">Blogs:</h1>
+   <h1 style="text-align:left; margin-left: 1rem; margin-top: -1rem;">Blogs:</h1>
 <ul  class="article-list">
     {% for article in articles %}
     <li style="text-transform: capitalize;">
