--- a/blog/templates/edit.html
+++ b/blog/templates/edit.html
@@ -16,6 +16,7 @@
         display: block;
         padding: 0.6rem;
         font-size: 1.2rem;
+        resize: none;
     }
     label{
         font-size: 1.5rem;
