--- a/blog/templates/articles.html
+++ b/blog/templates/articles.html
@@ -22,6 +22,7 @@
         padding: 20px; 
         border-radius: 5px; 
         border: 2px solid #1379ff;
+        box-shadow: 1px 2px 10px rgba(0, 0, 0, 0.411);
     }
     input,textarea{
         outline: none;
@@ -30,6 +31,7 @@
         display: block;
         padding: 0.6rem;
         font-size: 1.2rem;
+        resize: none;
     }
     label{
         font-size: 1.5rem;
